fix: letter-spacing 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,7 @@
 
 html {
   margin: 0 auto;
+  letter-spacing: -0.025rem;
 }
 
 body {
